--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
  <h1>Title of the page</h1>
  And now more text goes here.
+  <iframe style='width: 100%; height: 800px;' src='https://voyant-tools.org/?panels=corpusterms%2Ctermsberry%2Ctrends%2Cphrases%2Cbubblelines&corpus=9e3dfbe0c5d5fa595e72f191b5070ea1'></iframe>
 </body>
 </html>
