--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
  And now more text goes here.
   <br>
   <br>
-  <iframe style='width: 80%; height: 800px;' src='https://voyant-tools.org/?panels=corpusterms%2Ctermsberry%2Ctrends%2Cphrases%2Cbubblelines&corpus=9e3dfbe0c5d5fa595e72f191b5070ea1'></iframe>
+ <iframe src="https://www.exhibit.so/exhibits/flapVRKE5QzHFJbAcV2T?embedded=true" width="640" height="480" allowfullscreen allow="autoplay" frameborder="0"></iframe>
 </body>
 </html>
