--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
  <h1>Title of the page</h1>
- And now more text goes here.
+ <p>And now more text goes here.
   <br>
   <br>
- <iframe src="https://www.exhibit.so/exhibits/flapVRKE5QzHFJbAcV2T?embedded=true" width="640" height="480" allowfullscreen allow="autoplay" frameborder="0"></iframe>
+ <iframe src="https://www.exhibit.so/exhibits/flapVRKE5QzHFJbAcV2T?embedded=true" width="640" height="480" allowfullscreen allow="autoplay" frameborder="0"></iframe></p>
 </body>
 </html>
